[PAGOPA-1837] fix: resolved wrong message error code