@@ -1,21 +1,7 @@
 package it.gov.pagopa.wispconverter.utils;
 
 
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.when;
-
 import io.micrometer.core.instrument.util.IOUtils;
-import java.io.ByteArrayOutputStream;
-import java.io.IOException;
-import java.io.InputStream;
-import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
-import java.util.Base64;
-import java.util.HashMap;
-import java.util.List;
-import java.util.zip.GZIPOutputStream;
-
 import it.gov.pagopa.gen.wispconverter.client.cache.model.ConnectionDto;
 import it.gov.pagopa.gen.wispconverter.client.cache.model.ServiceDto;
 import it.gov.pagopa.gen.wispconverter.client.cache.model.StationCreditorInstitutionDto;
@@ -27,6 +13,20 @@ import it.gov.pagopa.wispconverter.exception.AppErrorCodeMessageEnum;
 import it.gov.pagopa.wispconverter.exception.AppException;
 import org.springframework.http.*;
 import org.springframework.web.client.HttpClientErrorException;
+
+import java.io.ByteArrayOutputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
+import java.util.Arrays;
+import java.util.Base64;
+import java.util.HashMap;
+import java.util.List;
+import java.util.zip.GZIPOutputStream;
+
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.when;
 
 public class TestUtils {
 
@@ -41,21 +41,21 @@ public class TestUtils {
         return content;
     }
 
-    public static it.gov.pagopa.gen.wispconverter.client.cache.model.ConfigDataV1Dto configData(String stationCode){
+    public static it.gov.pagopa.gen.wispconverter.client.cache.model.ConfigDataV1Dto configData(String stationCode) {
         it.gov.pagopa.gen.wispconverter.client.cache.model.ConfigDataV1Dto configDataV1 = new it.gov.pagopa.gen.wispconverter.client.cache.model.ConfigDataV1Dto();
         configDataV1.setStations(new HashMap<>());
         it.gov.pagopa.gen.wispconverter.client.cache.model.StationDto station = new it.gov.pagopa.gen.wispconverter.client.cache.model.StationDto();
         station.setStationCode(stationCode);
-    station.setConnection(new ConnectionDto());
-    station.getConnection().setIp("127.0.0.1");
-    station.getConnection().setPort(8888l);
-    station.getConnection().setProtocol(ConnectionDto.ProtocolEnum.HTTP);
-    station.setService(new ServiceDto());
-    station.getService().setPath("/path");
+        station.setConnection(new ConnectionDto());
+        station.getConnection().setIp("127.0.0.1");
+        station.getConnection().setPort(8888L);
+        station.getConnection().setProtocol(ConnectionDto.ProtocolEnum.HTTP);
+        station.setService(new ServiceDto());
+        station.getService().setPath("/path");
         station.setRedirect(new it.gov.pagopa.gen.wispconverter.client.cache.model.RedirectDto());
         station.getRedirect().setIp("127.0.0.1");
         station.getRedirect().setPath("/redirect");
-        station.getRedirect().setPort(8888l);
+        station.getRedirect().setPort(8888L);
         station.getRedirect().setProtocol(it.gov.pagopa.gen.wispconverter.client.cache.model.RedirectDto.ProtocolEnum.HTTPS);
         station.getRedirect().setQueryString("param=1");
         configDataV1.getStations().put(station.getStationCode(), station);
@@ -76,7 +76,7 @@ public class TestUtils {
     }
 
     public static it.gov.pagopa.gen.wispconverter.client.cache.model.ConfigDataV1Dto configDataCreditorInstitutionStations
-            (StationCreditorInstitutionDto stationCreditorInstitutionDto){
+            (StationCreditorInstitutionDto stationCreditorInstitutionDto) {
         it.gov.pagopa.gen.wispconverter.client.cache.model.ConfigDataV1Dto configDataV1 = new it.gov.pagopa.gen.wispconverter.client.cache.model.ConfigDataV1Dto();
         configDataV1.setCreditorInstitutionStations(new HashMap<>());
         configDataV1.getCreditorInstitutionStations().put(stationCreditorInstitutionDto.getCreditorInstitutionCode(), stationCreditorInstitutionDto);
@@ -85,14 +85,14 @@ public class TestUtils {
         station.setStationCode(stationCreditorInstitutionDto.getStationCode());
         station.setConnection(new ConnectionDto());
         station.getConnection().setIp("127.0.0.1");
-        station.getConnection().setPort(8888l);
+        station.getConnection().setPort(8888L);
         station.getConnection().setProtocol(ConnectionDto.ProtocolEnum.HTTP);
         station.setService(new ServiceDto());
         station.getService().setPath("/path");
         station.setRedirect(new it.gov.pagopa.gen.wispconverter.client.cache.model.RedirectDto());
         station.getRedirect().setIp("127.0.0.1");
         station.getRedirect().setPath("/redirect");
-        station.getRedirect().setPort(8888l);
+        station.getRedirect().setPort(8888L);
         station.getRedirect().setProtocol(it.gov.pagopa.gen.wispconverter.client.cache.model.RedirectDto.ProtocolEnum.HTTPS);
         station.getRedirect().setQueryString("param=1");
         configDataV1.getStations().put(station.getStationCode(), station);
@@ -112,137 +112,140 @@ public class TestUtils {
         return configDataV1;
     }
 
-    public static void setMock(it.gov.pagopa.gen.wispconverter.client.decouplercaching.invoker.ApiClient client, ResponseEntity response){
-        when(client.invokeAPI(any(),any(),any(),any(),any(),any(),any(),any(),any(),any(),any(),any())).thenReturn(response);
-        when(client.parameterToMultiValueMap(any(),any(),any())).thenReturn(new HttpHeaders());
+    public static void setMock(it.gov.pagopa.gen.wispconverter.client.decouplercaching.invoker.ApiClient client, ResponseEntity response) {
+        when(client.invokeAPI(any(), any(), any(), any(), any(), any(), any(), any(), any(), any(), any(), any())).thenReturn(response);
+        when(client.parameterToMultiValueMap(any(), any(), any())).thenReturn(new HttpHeaders());
         when(client.parameterToString(any())).thenReturn("");
-        when(client.selectHeaderAccept(any())).thenReturn(Arrays.asList());
-        when(client.selectHeaderContentType(any())).thenReturn(MediaType.APPLICATION_JSON);
-    }
-    public static void setMock(it.gov.pagopa.gen.wispconverter.client.cache.invoker.ApiClient client,ResponseEntity response){
-        when(client.invokeAPI(any(),any(),any(),any(),any(),any(),any(),any(),any(),any(),any(),any())).thenReturn(response);
-        when(client.parameterToMultiValueMap(any(),any(),any())).thenReturn(new HttpHeaders());
-        when(client.parameterToString(any())).thenReturn("");
-        when(client.selectHeaderAccept(any())).thenReturn(Arrays.asList());
-        when(client.selectHeaderContentType(any())).thenReturn(MediaType.APPLICATION_JSON);
-    }
-    public static void setMock(it.gov.pagopa.gen.wispconverter.client.iuvgenerator.invoker.ApiClient client,ResponseEntity response){
-        when(client.invokeAPI(any(),any(),any(),any(),any(),any(),any(),any(),any(),any(),any(),any())).thenReturn(response);
-        when(client.parameterToMultiValueMap(any(),any(),any())).thenReturn(new HttpHeaders());
-        when(client.parameterToString(any())).thenReturn("");
-        when(client.selectHeaderAccept(any())).thenReturn(Arrays.asList());
-        when(client.selectHeaderContentType(any())).thenReturn(MediaType.APPLICATION_JSON);
-    }
-    public static void setMock(it.gov.pagopa.gen.wispconverter.client.gpd.invoker.ApiClient client,ResponseEntity response){
-        when(client.invokeAPI(any(),any(),any(),any(),any(),any(),any(),any(),any(),any(),any(),any())).thenReturn(response);
-        when(client.parameterToMultiValueMap(any(),any(),any())).thenReturn(new HttpHeaders());
-        when(client.parameterToString(any())).thenReturn("");
-        when(client.selectHeaderAccept(any())).thenReturn(Arrays.asList());
+        when(client.selectHeaderAccept(any())).thenReturn(List.of());
         when(client.selectHeaderContentType(any())).thenReturn(MediaType.APPLICATION_JSON);
     }
 
-    public static void setMockGet(it.gov.pagopa.gen.wispconverter.client.gpd.invoker.ApiClient client, ResponseEntity response){
-        when(client.invokeAPI(any(),eq(HttpMethod.GET),any(),any(),any(),any(),any(),any(),any(),any(),any(),any())).thenReturn(response);
-        when(client.parameterToMultiValueMap(any(),any(),any())).thenReturn(new HttpHeaders());
+    public static void setMock(it.gov.pagopa.gen.wispconverter.client.cache.invoker.ApiClient client, ResponseEntity response) {
+        when(client.invokeAPI(any(), any(), any(), any(), any(), any(), any(), any(), any(), any(), any(), any())).thenReturn(response);
+        when(client.parameterToMultiValueMap(any(), any(), any())).thenReturn(new HttpHeaders());
         when(client.parameterToString(any())).thenReturn("");
-        when(client.selectHeaderAccept(any())).thenReturn(Arrays.asList());
+        when(client.selectHeaderAccept(any())).thenReturn(List.of());
         when(client.selectHeaderContentType(any())).thenReturn(MediaType.APPLICATION_JSON);
     }
 
-    public static void setMockGetExceptionNotFound(it.gov.pagopa.gen.wispconverter.client.gpd.invoker.ApiClient client){
-        when(client.invokeAPI(any(),eq(HttpMethod.GET),any(),any(),any(),any(),any(),any(),any(),any(),any(),any()))
-                .thenThrow(new AppException(new HttpClientErrorException(HttpStatus.NOT_FOUND), AppErrorCodeMessageEnum.CLIENT_GPD_DEBT_POSITION_NOT_FOUND));
-    }
-
-    public static void setMockGetExceptionBadRequest(it.gov.pagopa.gen.wispconverter.client.gpd.invoker.ApiClient client){
-        when(client.invokeAPI(any(),eq(HttpMethod.GET),any(),any(),any(),any(),any(),any(),any(),any(),any(),any()))
-                .thenThrow(new AppException(new HttpClientErrorException(HttpStatus.BAD_REQUEST), AppErrorCodeMessageEnum.CLIENT_GPD_DEBT_POSITION_BAD_REQUEST));
-    }
-
-    public static void setMockPut(it.gov.pagopa.gen.wispconverter.client.gpd.invoker.ApiClient client,ResponseEntity response){
-        when(client.invokeAPI(any(),eq(HttpMethod.PUT),any(),any(),any(),any(),any(),any(),any(),any(),any(),any())).thenReturn(response);
-        when(client.parameterToMultiValueMap(any(),any(),any())).thenReturn(new HttpHeaders());
+    public static void setMock(it.gov.pagopa.gen.wispconverter.client.iuvgenerator.invoker.ApiClient client, ResponseEntity response) {
+        when(client.invokeAPI(any(), any(), any(), any(), any(), any(), any(), any(), any(), any(), any(), any())).thenReturn(response);
+        when(client.parameterToMultiValueMap(any(), any(), any())).thenReturn(new HttpHeaders());
         when(client.parameterToString(any())).thenReturn("");
-        when(client.selectHeaderAccept(any())).thenReturn(Arrays.asList());
+        when(client.selectHeaderAccept(any())).thenReturn(List.of());
         when(client.selectHeaderContentType(any())).thenReturn(MediaType.APPLICATION_JSON);
     }
 
-    public static void setMockPost(it.gov.pagopa.gen.wispconverter.client.gpd.invoker.ApiClient client,ResponseEntity response){
-        when(client.invokeAPI(any(),eq(HttpMethod.POST),any(),any(),any(),any(),any(),any(),any(),any(),any(),any())).thenReturn(response);
-        when(client.parameterToMultiValueMap(any(),any(),any())).thenReturn(new HttpHeaders());
+    public static void setMock(it.gov.pagopa.gen.wispconverter.client.gpd.invoker.ApiClient client, ResponseEntity response) {
+        when(client.invokeAPI(any(), any(), any(), any(), any(), any(), any(), any(), any(), any(), any(), any())).thenReturn(response);
+        when(client.parameterToMultiValueMap(any(), any(), any())).thenReturn(new HttpHeaders());
         when(client.parameterToString(any())).thenReturn("");
-        when(client.selectHeaderAccept(any())).thenReturn(Arrays.asList());
+        when(client.selectHeaderAccept(any())).thenReturn(List.of());
         when(client.selectHeaderContentType(any())).thenReturn(MediaType.APPLICATION_JSON);
     }
 
-    public static void setMock(it.gov.pagopa.gen.wispconverter.client.checkout.invoker.ApiClient client,ResponseEntity response){
-        when(client.invokeAPI(any(),any(),any(),any(),any(),any(),any(),any(),any(),any(),any(),any())).thenReturn(response);
-        when(client.parameterToMultiValueMap(any(),any(),any())).thenReturn(new HttpHeaders());
+    public static void setMockGet(it.gov.pagopa.gen.wispconverter.client.gpd.invoker.ApiClient client, ResponseEntity response) {
+        when(client.invokeAPI(any(), eq(HttpMethod.GET), any(), any(), any(), any(), any(), any(), any(), any(), any(), any())).thenReturn(response);
+        when(client.parameterToMultiValueMap(any(), any(), any())).thenReturn(new HttpHeaders());
         when(client.parameterToString(any())).thenReturn("");
-        when(client.selectHeaderAccept(any())).thenReturn(Arrays.asList());
+        when(client.selectHeaderAccept(any())).thenReturn(List.of());
         when(client.selectHeaderContentType(any())).thenReturn(MediaType.APPLICATION_JSON);
     }
 
-    public static String getInnerRptPayload(boolean bollo,String amount,String datiSpecificiRiscossione){
-        if(datiSpecificiRiscossione==null){
+    public static void setMockGetExceptionNotFound(it.gov.pagopa.gen.wispconverter.client.gpd.invoker.ApiClient client) {
+        when(client.invokeAPI(any(), eq(HttpMethod.GET), any(), any(), any(), any(), any(), any(), any(), any(), any(), any()))
+                .thenThrow(new AppException(new HttpClientErrorException(HttpStatus.NOT_FOUND), AppErrorCodeMessageEnum.CLIENT_GPD));
+    }
+
+    public static void setMockGetExceptionBadRequest(it.gov.pagopa.gen.wispconverter.client.gpd.invoker.ApiClient client) {
+        when(client.invokeAPI(any(), eq(HttpMethod.GET), any(), any(), any(), any(), any(), any(), any(), any(), any(), any()))
+                .thenThrow(new AppException(new HttpClientErrorException(HttpStatus.BAD_REQUEST), AppErrorCodeMessageEnum.CLIENT_GPD));
+    }
+
+    public static void setMockPut(it.gov.pagopa.gen.wispconverter.client.gpd.invoker.ApiClient client, ResponseEntity response) {
+        when(client.invokeAPI(any(), eq(HttpMethod.PUT), any(), any(), any(), any(), any(), any(), any(), any(), any(), any())).thenReturn(response);
+        when(client.parameterToMultiValueMap(any(), any(), any())).thenReturn(new HttpHeaders());
+        when(client.parameterToString(any())).thenReturn("");
+        when(client.selectHeaderAccept(any())).thenReturn(List.of());
+        when(client.selectHeaderContentType(any())).thenReturn(MediaType.APPLICATION_JSON);
+    }
+
+    public static void setMockPost(it.gov.pagopa.gen.wispconverter.client.gpd.invoker.ApiClient client, ResponseEntity response) {
+        when(client.invokeAPI(any(), eq(HttpMethod.POST), any(), any(), any(), any(), any(), any(), any(), any(), any(), any())).thenReturn(response);
+        when(client.parameterToMultiValueMap(any(), any(), any())).thenReturn(new HttpHeaders());
+        when(client.parameterToString(any())).thenReturn("");
+        when(client.selectHeaderAccept(any())).thenReturn(List.of());
+        when(client.selectHeaderContentType(any())).thenReturn(MediaType.APPLICATION_JSON);
+    }
+
+    public static void setMock(it.gov.pagopa.gen.wispconverter.client.checkout.invoker.ApiClient client, ResponseEntity response) {
+        when(client.invokeAPI(any(), any(), any(), any(), any(), any(), any(), any(), any(), any(), any(), any())).thenReturn(response);
+        when(client.parameterToMultiValueMap(any(), any(), any())).thenReturn(new HttpHeaders());
+        when(client.parameterToString(any())).thenReturn("");
+        when(client.selectHeaderAccept(any())).thenReturn(List.of());
+        when(client.selectHeaderContentType(any())).thenReturn(MediaType.APPLICATION_JSON);
+    }
+
+    public static String getInnerRptPayload(boolean bollo, String amount, String datiSpecificiRiscossione) {
+        if (datiSpecificiRiscossione == null) {
             datiSpecificiRiscossione = "9/tipodovuto_7/datospecifico";
         }
-        String rpt = TestUtils.loadFileContent(bollo?"/requests/rptBollo.xml":"/requests/rpt.xml");
+        String rpt = TestUtils.loadFileContent(bollo ? "/requests/rptBollo.xml" : "/requests/rpt.xml");
         return rpt
-                .replace("{datiSpecificiRiscossione}",datiSpecificiRiscossione)
+                .replace("{datiSpecificiRiscossione}", datiSpecificiRiscossione)
                 .replaceAll("\\{amount}", amount);
     }
 
-    public static String getRptPayload(boolean bollo,String station,String amount,String datiSpecificiRiscossione){
-        if(datiSpecificiRiscossione==null){
+    public static String getRptPayload(boolean bollo, String station, String amount, String datiSpecificiRiscossione) {
+        if (datiSpecificiRiscossione == null) {
             datiSpecificiRiscossione = "9/tipodovuto_7/datospecifico";
         }
-        String rpt = TestUtils.loadFileContent(bollo?"/requests/rptBollo.xml":"/requests/rpt.xml");
+        String rpt = TestUtils.loadFileContent(bollo ? "/requests/rptBollo.xml" : "/requests/rpt.xml");
         String rptreplace = rpt
-                .replace("{datiSpecificiRiscossione}",datiSpecificiRiscossione)
+                .replace("{datiSpecificiRiscossione}", datiSpecificiRiscossione)
                 .replaceAll("\\{amount}", amount);
         String nodoInviaRPT = TestUtils.loadFileContent("/requests/nodoInviaRPT.xml");
         return nodoInviaRPT
-                .replace("{station}",station)
+                .replace("{station}", station)
                 .replace("{rpt}", Base64.getEncoder().encodeToString(rptreplace.getBytes(StandardCharsets.UTF_8)));
     }
 
-    public static String getRptNullIbanPayload(String station,String amount,String datiSpecificiRiscossione){
-        if(datiSpecificiRiscossione==null){
+    public static String getRptNullIbanPayload(String station, String amount, String datiSpecificiRiscossione) {
+        if (datiSpecificiRiscossione == null) {
             datiSpecificiRiscossione = "9/tipodovuto_7/datospecifico";
         }
         String rpt = TestUtils.loadFileContent("/requests/rptNullIban.xml");
         String rptreplace = rpt
-                .replace("{datiSpecificiRiscossione}",datiSpecificiRiscossione)
+                .replace("{datiSpecificiRiscossione}", datiSpecificiRiscossione)
                 .replaceAll("\\{amount}", amount);
         String nodoInviaRPT = TestUtils.loadFileContent("/requests/nodoInviaRPT.xml");
         return nodoInviaRPT
-                .replace("{station}",station)
+                .replace("{station}", station)
                 .replace("{rpt}", Base64.getEncoder().encodeToString(rptreplace.getBytes(StandardCharsets.UTF_8)));
     }
 
-    public static String getCarrelloPayload(int numofrpt,String station,String amount,boolean multibeneficiario){
+    public static String getCarrelloPayload(int numofrpt, String station, String amount, boolean multibeneficiario) {
         String rpt = TestUtils.loadFileContent("/requests/rptCart.xml");
         String rptReplaceAmount = rpt.replaceAll("\\{amount}", amount);
         String iuv = "123456IUVMOCK%s";
-        StringBuilder listaRpt = new StringBuilder("");
-        for(int i=0;i<numofrpt;i++){
+        StringBuilder listaRpt = new StringBuilder();
+        for (int i = 0; i < numofrpt; i++) {
             String rptReplaceIuv = rptReplaceAmount.replaceAll("\\{iuv}", String.format(iuv, i));
             listaRpt.append(
-                    ("<elementoListaRPT>"+
-                            "<identificativoDominio></identificativoDominio>"+
-                            "<identificativoUnivocoVersamento></identificativoUnivocoVersamento>"+
-                            "<codiceContestoPagamento></codiceContestoPagamento>"+
-                            "<tipoFirma></tipoFirma>"+
+                    ("<elementoListaRPT>" +
+                            "<identificativoDominio></identificativoDominio>" +
+                            "<identificativoUnivocoVersamento></identificativoUnivocoVersamento>" +
+                            "<codiceContestoPagamento></codiceContestoPagamento>" +
+                            "<tipoFirma></tipoFirma>" +
                             "<rpt>{rpt}</rpt>" +
-                            "</elementoListaRPT>").replace("{rpt}",Base64.getEncoder().encodeToString(rptReplaceIuv.getBytes(StandardCharsets.UTF_8)))
+                            "</elementoListaRPT>").replace("{rpt}", Base64.getEncoder().encodeToString(rptReplaceIuv.getBytes(StandardCharsets.UTF_8)))
             );
         }
 
         String carrello = TestUtils.loadFileContent("/requests/nodoInviaCarrelloRPT.xml");
         return carrello
-                .replace("{station}",station)
-                .replace("{multi}",multibeneficiario?"<multiBeneficiario>true</multiBeneficiario>":"")
+                .replace("{station}", station)
+                .replace("{multi}", multibeneficiario ? "<multiBeneficiario>true</multiBeneficiario>" : "")
                 .replace("{elementiRpt}", listaRpt.toString());
     }
 
@@ -254,7 +257,8 @@ public class TestUtils {
         bais.close();
         return bais.toByteArray();
     }
-    public static String zipAndEncode(String p){
+
+    public static String zipAndEncode(String p) {
         try {
             return new String(Base64.getEncoder().encode(zip(p.getBytes(StandardCharsets.UTF_8))));
         } catch (IOException e) {
@@ -262,7 +266,7 @@ public class TestUtils {
         }
     }
 
-    public static PaymentPositionModelBaseResponseDto getValidPaymentPositionModelBaseResponseDto(){
+    public static PaymentPositionModelBaseResponseDto getValidPaymentPositionModelBaseResponseDto() {
         PaymentPositionModelBaseResponseDto paymentPositionModelBaseResponseDto = new PaymentPositionModelBaseResponseDto();
         paymentPositionModelBaseResponseDto.setOrganizationFiscalCode("org12345678");
         paymentPositionModelBaseResponseDto.setIupd("abcd-efgh-ilmn-opqr");
@@ -271,7 +275,7 @@ public class TestUtils {
         return paymentPositionModelBaseResponseDto;
     }
 
-    public static PaymentPositionModelBaseResponseDto getInvalidPaymentPositionModelBaseResponseDto(){
+    public static PaymentPositionModelBaseResponseDto getInvalidPaymentPositionModelBaseResponseDto() {
         PaymentPositionModelBaseResponseDto paymentPositionModelBaseResponseDto = new PaymentPositionModelBaseResponseDto();
         paymentPositionModelBaseResponseDto.setOrganizationFiscalCode("org12345678");
         paymentPositionModelBaseResponseDto.setIupd("abcd-efgh-ilmn-opqr");
@@ -280,7 +284,7 @@ public class TestUtils {
         return paymentPositionModelBaseResponseDto;
     }
 
-    public static PaymentOptionModelResponseDto getPaymentOptionModelResponseDto(){
+    public static PaymentOptionModelResponseDto getPaymentOptionModelResponseDto() {
         PaymentOptionModelResponseDto paymentOptionModelResponseDto = new PaymentOptionModelResponseDto();
         paymentOptionModelResponseDto.setIuv("123456IUVMOCK1");
         paymentOptionModelResponseDto.setAmount(200L);
@@ -288,14 +292,14 @@ public class TestUtils {
         return paymentOptionModelResponseDto;
     }
 
-    public static PaymentPositionModelDto getPaymentPositionModelDto(){
+    public static PaymentPositionModelDto getPaymentPositionModelDto() {
         PaymentPositionModelDto paymentPositionModelDto = new PaymentPositionModelDto();
         paymentPositionModelDto.setIupd("abcd-efgh-ilmn-opqr");
         paymentPositionModelDto.setPaymentOption(List.of(getPaymentOptionModelDto()));
         return paymentPositionModelDto;
     }
 
-    public static PaymentOptionModelDto getPaymentOptionModelDto(){
+    public static PaymentOptionModelDto getPaymentOptionModelDto() {
         PaymentOptionModelDto paymentOptionModelDto = new PaymentOptionModelDto();
         paymentOptionModelDto.setIuv("123456IUVMOCK1");
         paymentOptionModelDto.setAmount(200L);
